# SocialSupportDetection

./: .gitignore  README.md  main.py  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_2.md  Shallow ML and DL research.md  fine tuning.md  task_details.md  training_plan.md
notebooks/: data_inspect.ipynb
results/: experiments.jsonl  experiments_deeplearning.jsonl  experiments_finetuning.jsonl  experiments_llm_judge.jsonl  experiments_multitask.jsonl  experiments_traditional.jsonl  results-finetuning.md
scripts/: dataset_analysis.py
src/: evaluate.py  metrics.py  predict.py  predict_submission.py  predict_submission_hybrid.py  predict_submission_llm.py  preprocessing.py  results.py  safety.py  train_task1.py  train_task2.py  train_task3.py  utils.py
src/data/: label_maps.py  loading.py  splits.py
src/deeplearning/: embeddings.py  models.py  predict.py  train.py
src/finetuning/: datasets.py  evaluate_llm.py  evaluate_llm_judge_prompt.py  lora_config.yaml  lora_config_4b.yaml  multitask_dataset.py  multitask_model.py  predict.py  prepare_llm_data.py  train.py  train_full.py  train_multitask.py  train_multitask_grid.py
src/llm_judge/: judge.py  parse.py  prompts.py
src/pipelines/: hierarchical.py  independent.py
src/traditional/: features.py  predict.py  train.py  vectorizers.py
