[project]
name = "socialsupportdetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "spacy>=3.7.0",
    "xgboost>=2.0.0",
    "emoji>=2.0.0",
]
